--- a/src/Server/MicroBluer.ServerHost/App.xaml
+++ b/src/Server/MicroBluer.ServerHost/App.xaml
@@ -7,6 +7,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/MicroBluer.ServerHost;component/Resources/Styles/TitleTextBoxStyles.xaml"/>
+                <ResourceDictionary Source="/MicroBluer.Windows.Notification;component/Assets/NotificationUI.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
