--- a/src/Server/MicroBluer.ServerHost/UI/Pages/LoadingPage.xaml
+++ b/src/Server/MicroBluer.ServerHost/UI/Pages/LoadingPage.xaml
@@ -1,5 +1,4 @@
-﻿
-<UserControl  x:Class="MicroBluer.ServerHost.Pages.LoadingPage"
+﻿<UserControl  x:Class="MicroBluer.ServerHost.UI.Pages.LoadingPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"  
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"  
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"   
