--- a/src/Server/MicroBluer.ServerHost/UI/Pages/WebPage.xaml
+++ b/src/Server/MicroBluer.ServerHost/UI/Pages/WebPage.xaml
@@ -1,13 +1,13 @@
-﻿<UserControl x:Class="MicroBluer.ServerHost.Pages.WebPage"
+﻿<ui:PageBase x:Class="MicroBluer.ServerHost.UI.Pages.WebPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:MicroBluer.ServerHost.Pages"
+             xmlns:ui="clr-namespace:MicroBluer.ServerHost.UI"
              xmlns:cefSharp="clr-namespace:CefSharp.Wpf;assembly=CefSharp.Wpf"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <cefSharp:ChromiumWebBrowser Name="chromeBrowser" Grid.Row="0" Address="https://www.baidu.com"/>
     </Grid>
-</UserControl>
+</ui:PageBase>
