--- a/src/Server/MicroBluer.ServerHost/App.xaml
+++ b/src/Server/MicroBluer.ServerHost/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="MicroBluer.ServerHost.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:MicroBluer.ServerHost"
-             StartupUri="MainWindow.xaml">
+             StartupUri="UI/MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
