--- a/src/Server/MicroBluer.ServerHost/UI/Pages/SettingPage.xaml
+++ b/src/Server/MicroBluer.ServerHost/UI/Pages/SettingPage.xaml
@@ -1,8 +1,9 @@
-﻿<UserControl x:Class="MicroBluer.ServerHost.UI.Pages.SettingPage"
+﻿<ui:PageBase x:Class="MicroBluer.ServerHost.UI.Pages.SettingPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:ui="clr-namespace:MicroBluer.ServerHost.UI"
              xmlns:ctrl="clr-namespace:MicroBluer.ServerHost.UI.Ctrls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="600">
@@ -38,4 +39,4 @@
         </StackPanel>
     </Grid>
 
-</UserControl>
+</ui:PageBase>
