--- a/src/Server/MicroBluer.ServerHost/UI/MainWindow.xaml
+++ b/src/Server/MicroBluer.ServerHost/UI/MainWindow.xaml
@@ -1,10 +1,11 @@
-﻿<Window x:Class="MicroBluer.ServerHost.MainWindow"
+﻿<Window x:Class="MicroBluer.ServerHost.UI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:ctrl="clr-namespace:MicroBluer.ServerHost.UI.Ctrls"
         xmlns:form="clr-namespace:System.Windows.Forms;assembly=System.Windows.Forms"
+        xmlns:ui="clr-namespace:MicroBluer.ServerHost.UI"
         xmlns:page="clr-namespace:MicroBluer.ServerHost.UI.Pages"
         mc:Ignorable="d"  Title="MainWindow"   ResizeMode="NoResize"  Closing="Window_Closing">
     <Grid>
@@ -19,8 +20,8 @@
         <StatusBar Height="23" Name="statusBar" Grid.Row="2" VerticalAlignment="Bottom" />
         
         <page:LoadingPage x:Name="loading"   Grid.Row="1"  Visibility="Hidden" />
-        <Border Name="CtrlsContainer"  Grid.Row="1"  Background="{DynamicResource {x:Static SystemColors.ActiveCaptionTextBrushKey}}">
-        </Border>
+        <ui:PageContainer x:Name="CtrlsContainer"  Grid.Row="1"  Background="{DynamicResource {x:Static SystemColors.ActiveCaptionTextBrushKey}}">
+        </ui:PageContainer>
 
 
         <ctrl:NotificationAreaIcon Text="小蓝人" MouseDoubleClick="NotificationAreaIcon_MouseDoubleClick"  >
