--- a/src/Server/MicroBluer.ServerHost/App.xaml
+++ b/src/Server/MicroBluer.ServerHost/App.xaml
@@ -6,6 +6,8 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/MicroBluer.ServerHost;component/Resources/Styles/TitleTextBoxStyles.xaml"/>
+                <ResourceDictionary Source="/MicroBluer.ServerHost;component/Resources/Styles/TitleSliderStyles.xaml"/>
+                <ResourceDictionary Source="/MicroBluer.ServerHost;component/Resources/Styles/TitleComboboxStyles.xaml"/>
                 <ResourceDictionary Source="/MicroBluer.Windows.Notification;component/Assets/NotificationUI.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
