--- a/src/Server/MicroBluer.ServerHost/UI/Pages/SpeechPage.xaml
+++ b/src/Server/MicroBluer.ServerHost/UI/Pages/SpeechPage.xaml
@@ -18,8 +18,6 @@
             <RowDefinition Height="80"></RowDefinition>
         </Grid.RowDefinitions>
 
-        
-
         <!-- 标题 -->
         <Border  Grid.Row="0"  Background="#FFC98484" >
             <TextBlock Name="TitleBroad" Text="语音合成"  FontSize="32" TextAlignment="Center" VerticalAlignment="Center" Foreground="#FF034F5B" ></TextBlock>
@@ -28,8 +26,7 @@
         <!-- 语料 -->
         <ctrl:TitleTextBox   Grid.Row="1"  Title="语料"     AcceptsReturn="True"  VerticalScrollBarVisibility="Visible" Height="{Binding Path=AutchWidht ,ElementName=Layoutroot}"   x:Name="InputContent"    TextWrapping="Wrap"  />
 
-        <ctrl:TitleCombobox  Grid.Row="2"  Title="阅读播音员" Height="50"  x:Name="AnnouncerSelector"  SelectionChanged="AnnouncerSelector_SelectionChanged"  />
-
+        <ctrl:TitleCombobox  Grid.Row="2"  Title="阅读播音员" Height="50"  x:Name="AnnouncerSelector"   />
        
         <Grid  Grid.Row="3" >
             <Grid.ColumnDefinitions>
